Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-10526

BufferPoolTest.Multi8RandomSpillToRemoteMix failed in tsan build

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • Impala 4.0.0
    • Impala 4.0.0
    • Backend
    • ghx-label-4

    Description

      This backend test failed in tsan build due to data race at

      be/src/runtime/io/scan-range.cc:386:7 in impala::io::ScanRange::CancelInternal(impala::Status const&, bool).

      Attachments

        Issue Links

          Activity

            People

              baggio000 Yida Wu
              wzhou Wenzhe Zhou
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: