IMPALA-10526: Fix BufferPoolTest.Multi8RandomSpillToRemoteMix failed in sanitizer builds

Fixed a data race issue when running testcase
BufferPoolTest.Multi8RandomSpillToRemoteMix in the tsan build. The
solution is to access ScanRange::use_local_buffer_ under
ScanRange::lock_.

Tests:
Rerun testcase BufferPoolTest.Multi8RandomSpillToRemoteMix.

Change-Id: Ic77dd85d20efc7066758b2ba61e2138745cbd90b
Reviewed-on: http://gerrit.cloudera.org:8080/17096
Reviewed-by: Thomas Tauber-Marshall <tmarshall@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>